setting. mockito 테스트 위한 옵션 추가